# markus

./: .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  CONTRIBUTORS  HISTORY.rst  MANIFEST.in  Makefile  README.rst  justfile  pyproject.toml  readthedocs.yml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docs/: Makefile  backends.rst  conf.py  dev.rst  filters.rst  index.rst  metricsoverview.rst  requirements.txt  testing.rst  usage.rst
markus/: __init__.py  main.py  testing.py  utils.py
markus/backends/: __init__.py  cloudwatch.py  datadog.py  logging.py  statsd.py
src/markus/: __init__.py  filters.py  main.py  pytest_plugin.py  testing.py  utils.py
src/markus/backends/: cloudwatch.py  datadog.py  logging.py  statsd.py
tests/: test_cloudwatch.py  test_datadog.py  test_filters.py  test_logging.py  test_metrics.py  test_mock.py  test_statsd.py  test_testing.py  test_utils.py
